--- a/package.json
+++ b/package.json
@@ -1,48 +1,103 @@
 {
-  "name": "z-manage-system",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "vite --mode=dev --host",
-    "start:prod": "vite --mode=prod",
-    "typecheck": "vue-tsc --noEmit --skipLibCheck",
-    "build:sandbox": "npm run build --mode=sandbox",
-    "build:prod": "npm run build --mode=production",
-    "build:stage": "npm run build --mode=staging",
-    "build:analyzer": "npm run build:stage",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "postinstall": "husky install"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.2",
-    "antd": "^5.1.7",
-    "axios": "^1.3.1",
-    "dayjs": "^1.11.7",
-    "lodash": "^4.17.21",
-    "mockjs": "^1.1.0",
-    "nprogress": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "less": "^4.1.3",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-style-import": "^2.0.0"
-  }
+	"name": "z-manage-system",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"start:mock": "cross-env useMock=true appEnv=mock vite",
+		"start": "vite --mode=dev --host",
+		"start:prod": "vite --mode=prod",
+		"typecheck": "vue-tsc --noEmit --skipLibCheck",
+		"build:sandbox": "npm run build --mode=sandbox",
+		"build:prod": "npm run build --mode=production",
+		"build:stage": "npm run build --mode=staging",
+		"build:analyzer": "npm run build:stage",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"postinstall": "npx husky install",
+		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
+		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
+		"lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --custom-syntax postcss-less --cache --cache-location node_modules/.cache/stylelint/",
+		"format": "npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier"
+	},
+	"dependencies": {
+		"@ant-design/icons": "^5.0.1",
+		"@ant-design/pro-components": "^2.3.52",
+		"@emotion/css": "^11.10.5",
+		"@react-pdf-viewer/core": "^3.11.0",
+		"@react-pdf-viewer/default-layout": "^3.11.0",
+		"@react-pdf-viewer/locales": "^1.0.0",
+		"@reduxjs/toolkit": "^1.9.2",
+		"ahooks": "^3.7.4",
+		"antd": "^5.1.7",
+		"axios": "^1.3.1",
+		"classnames": "^2.3.2",
+		"crypto-js": "^4.1.1",
+		"dayjs": "^1.11.7",
+		"history": "^5.3.0",
+		"lodash": "^4.17.21",
+		"mockjs": "^1.1.0",
+		"nprogress": "^0.2.0",
+		"qs": "^6.11.0",
+		"query-string": "^8.1.0",
+		"react": "^18.2.0",
+		"react-captcha-code": "^1.0.7",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.8.0",
+		"react-top-loading-bar": "^2.3.1",
+		"typescript-cookie": "^1.0.4",
+		"xgplayer": "^2.32.2"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.4.2",
+		"@commitlint/config-conventional": "^17.4.2",
+		"@types/crypto-js": "^4.1.1",
+		"@types/lodash": "^4.14.191",
+		"@types/node": "^18.11.18",
+		"@types/nprogress": "^0.2.0",
+		"@types/qs": "^6.9.7",
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@types/redux-logger": "^3.0.9",
+		"@typescript-eslint/eslint-plugin": "^5.30.5",
+		"@typescript-eslint/parser": "^5.30.5",
+		"@vitejs/plugin-react-swc": "^3.0.0",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.19.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.3",
+		"less": "^4.1.3",
+		"lint-staged": "^13.1.0",
+		"picocolors": "^1.0.0",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^6.0.0",
+		"rollup-plugin-visualizer": "^5.9.0",
+		"stylelint": "^14.9.1",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-config-standard": "^26.0.0",
+		"stylelint-less": "^1.0.6",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0",
+		"vite-plugin-checker": "^0.5.5",
+		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-eslint": "^1.8.1",
+		"vite-plugin-html": "^3.2.0",
+		"vite-plugin-mock": "^2.9.6",
+		"vite-plugin-progress": "^0.0.6",
+		"vite-plugin-style-import": "^2.0.0"
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx}": [
+			"eslint --fix",
+			"prettier --write --loglevel warn"
+		],
+		"src/**/*.{less,css}": [
+			"stylelint --fix --custom-syntax postcss-less --cache"
+		]
+	}
 }
