--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"postinstall": "npx husky install",
-		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
+		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src --cache",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
-		"lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --custom-syntax postcss-less --cache --cache-location node_modules/.cache/stylelint/",
+		"lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --custom-syntax postcss-less --cache --cache-location node_modules/.cache/stylelint/ --cache",
 		"format": "npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier"
 	},
 	"dependencies": {
@@ -60,19 +60,21 @@
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@types/redux-logger": "^3.0.9",
-		"@typescript-eslint/eslint-plugin": "^5.30.5",
-		"@typescript-eslint/parser": "^5.30.5",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
 		"@vitejs/plugin-react-swc": "^3.0.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.19.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"husky": "^8.0.3",
 		"less": "^4.1.3",
 		"lint-staged": "^13.1.0",
 		"picocolors": "^1.0.0",
+		"postcss-less": "^1.1.5",
+		"prettier": "^2.8.3",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"rollup-plugin-visualizer": "^5.9.0",
@@ -80,7 +82,6 @@
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^26.0.0",
-		"stylelint-less": "^1.0.6",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
 		"vite-plugin-checker": "^0.5.5",
@@ -93,7 +94,7 @@
 	},
 	"lint-staged": {
 		"src/**/*.{ts,tsx}": [
-			"eslint --fix",
+			"npm run lint:eslint --fix",
 			"prettier --write --loglevel warn"
 		],
 		"src/**/*.{less,css}": [
