--- a/.eslintrc
+++ b/.eslintrc
@@ -8,28 +8,50 @@
 		"prettier",
 		"plugin:prettier/recommended"
 	],
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
 	"settings": {
 		"react": {
 			"version": "18.2.0"
+		},
+		"import/resolver": {
+			"node": {
+				"paths": ["src"],
+				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+			}
 		}
 	},
+  "globals": {
+    "chrome": "readonly"
+  },
 	"rules": {
 		"react/jsx-uses-react": "off",
-		"react/react-in-jsx-scope": "off",
+		"react/react-in-jsx-scope": "off", // 使用 jsx 时不需要引用 React
 		"prefer-const": "warn",
 		"no-unused-vars": "off",
 		"@typescript-eslint/no-unused-vars": ["off"],
 		"@typescript-eslint/no-explicit-any": ["off"],
 		"react-hooks/exhaustive-deps": ["off"],
-    "react/display-name": "off",
-    // 方法前是否要一个空格 always: 总是要
-    "space-before-function-paren": [0, "never"],
-    "@typescript-eslint/no-empty-function": "off",
-    "@typescript-eslint/no-this-alias": "off",
-    "@typescript-eslint/no-var-requires": "off",
-    "no-empty":"off"
+		"react/display-name": "off",
+		// 方法前是否要一个空格 always: 总是要
+		"space-before-function-paren": [0, "never"],
+		"@typescript-eslint/no-empty-function": "off",
+		"@typescript-eslint/no-this-alias": "off",
+		"@typescript-eslint/no-var-requires": "off",
+		"no-empty": "off",
+    "@typescript-eslint/ban-ts-comment":"off"
 		// "no-unused-vars": 0,
 		// "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
 	}
