--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"postinstall": "npx husky install",
 		"lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src --cache",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
-		"lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --custom-syntax postcss-less --cache --cache-location node_modules/.cache/stylelint/ --cache",
+		"lint:stylelint": "stylelint --fix \"**/*.{less,css}\" ./src --cache",
 		"format": "npm run lint:eslint && npm run lint:stylelint && npm run lint:prettier"
 	},
 	"dependencies": {
@@ -78,9 +78,9 @@
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"rollup-plugin-visualizer": "^5.9.0",
-		"stylelint": "^14.9.1",
-		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier": "^9.0.4",
+		"stylelint-config-recess-order": "^3.1.0",
 		"stylelint-config-standard": "^26.0.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
@@ -96,9 +96,6 @@
 		"src/**/*.{ts,tsx}": [
 			"npm run lint:eslint --fix",
 			"prettier --write --loglevel warn"
-		],
-		"src/**/*.{less,css}": [
-			"npm run lint:stylelint"
 		]
 	}
 }
