--- a/.eslintrc
+++ b/.eslintrc
@@ -8,18 +8,18 @@
 		"prettier",
 		"plugin:prettier/recommended"
 	],
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true
+	},
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
 	"settings": {
@@ -33,9 +33,9 @@
 			}
 		}
 	},
-  "globals": {
-    "chrome": "readonly"
-  },
+	"globals": {
+		"chrome": "readonly"
+	},
 	"rules": {
 		"react/jsx-uses-react": "off",
 		"react/react-in-jsx-scope": "off", // 使用 jsx 时不需要引用 React
@@ -51,7 +51,19 @@
 		"@typescript-eslint/no-this-alias": "off",
 		"@typescript-eslint/no-var-requires": "off",
 		"no-empty": "off",
-    "@typescript-eslint/ban-ts-comment":"off"
+		"@typescript-eslint/ban-ts-comment": "off",
+		/* 强制使用一致的反勾号、双引号或单引号 */
+		"quotes": [
+			2,
+			"single",
+			{
+				"avoidEscape": true,
+				"allowTemplateLiterals": true
+			}
+		],
+		"prettier/prettier": "off",
+		"react/jsx-no-undef": "off",
+		"react/prop-types": "off"
 		// "no-unused-vars": 0,
 		// "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
 	}
