--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
 	"type": "module",
 	"scripts": {
 		"start:mock": "cross-env useMock=true appEnv=mock vite",
-		"start": "vite --mode=dev --host",
+		"start": "vite --mode=dev --force --host",
 		"start:prod": "vite --mode=prod",
 		"typecheck": "vue-tsc --noEmit --skipLibCheck",
-		"build:sandbox": "npm run build --mode=sandbox",
-		"build:prod": "npm run build --mode=production",
-		"build:stage": "npm run build --mode=staging",
+		"build:sandbox": "tsc && vite build --mode=sandbox",
+		"build:prod": "tsc && vite build --mode=production",
+		"build:stage": "tsc && vite build --mode=staging",
 		"build:analyzer": "npm run build:stage",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
@@ -29,17 +29,19 @@
 		"@react-pdf-viewer/locales": "^1.0.0",
 		"@reduxjs/toolkit": "^1.9.2",
 		"ahooks": "^3.7.4",
-		"antd": "^5.1.7",
+		"antd": "^5.3.0",
 		"axios": "^1.3.1",
 		"classnames": "^2.3.2",
 		"crypto-js": "^4.1.1",
 		"dayjs": "^1.11.7",
 		"history": "^5.3.0",
+		"jwt-decode": "^3.1.2",
 		"lodash": "^4.17.21",
 		"mockjs": "^1.1.0",
 		"nprogress": "^0.2.0",
+		"pdfjs-dist": "^3.4.120",
 		"qs": "^6.11.0",
-		"query-string": "^8.1.0",
+		"query-string": "^7.1.1",
 		"react": "^18.2.0",
 		"react-captcha-code": "^1.0.7",
 		"react-dom": "^18.2.0",
@@ -83,6 +85,7 @@
 		"stylelint-config-recess-order": "^3.1.0",
 		"stylelint-config-standard": "^26.0.0",
 		"typescript": "^4.9.3",
+		"unplugin-auto-import": "^0.15.1",
 		"vite": "^4.1.0",
 		"vite-plugin-checker": "^0.5.5",
 		"vite-plugin-compression": "^0.5.1",
@@ -90,7 +93,8 @@
 		"vite-plugin-html": "^3.2.0",
 		"vite-plugin-mock": "^2.9.6",
 		"vite-plugin-progress": "^0.0.6",
-		"vite-plugin-style-import": "^2.0.0"
+		"vite-plugin-style-import": "^2.0.0",
+		"vite-plugin-stylelint": "^4.2.0"
 	},
 	"lint-staged": {
 		"src/**/*.{ts,tsx}": [
