--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.8.0",
 		"react-top-loading-bar": "^2.3.1",
+		"react-transition-group": "^4.4.5",
 		"typescript-cookie": "^1.0.4",
 		"xgplayer": "^2.32.2"
 	},
