--- a/.env
+++ b/.env
@@ -6,6 +6,15 @@ VITE_APP_BASE_PATH = /
 
 VITE_APP_API_PREFIX = /taste
 
+# 是否生成包预览文件
+VITE_REPORT = false
+
+# 是否开启gzip压缩
+VITE_BUILD_GZIP = false
+
+# 是否删除生产环境 console
+VITE_DROP_CONSOLE = false
+
 VITE_APP_BASE_URL = https://testinterface.mtaste.cn/taste/
 
 # VITE_APP_BASE_URL = https://interface.mtaste.cn/taste/
