--- a/.env.production
+++ b/.env.production
@@ -8,6 +8,15 @@ VITE_APP_BASE_PATH = /manage-taste-boss/
 
 # base api
 VITE_APP_API_PREFIX = /
+# 是否生成包预览文件
+VITE_REPORT = false
+
+# 是否开启gzip压缩
+VITE_BUILD_GZIP = false
+
+# 是否删除生产环境 console
+VITE_DROP_CONSOLE = true
+
 # 线上环境接口地址
 VITE_APP_BASE_URL= https://interface.mtaste.cn/taste/
 # 测试环境接口地址
@@ -15,6 +24,6 @@ VITE_APP_BASE_URL= https://interface.mtaste.cn/taste/
 # 线上环境域名
 VITE_APP_URL = https://web.mtaste.cn
 
-VITE_DROP_CONSOLE = true
+
 # 高德web服务安全密钥
 VITE_APP_A_AMP_SECURITY_JS_CODE = d2aba0f3e27322791004ddb2d49cd81a
