--- a/.env.sandbox
+++ b/.env.sandbox
@@ -9,6 +9,15 @@ VITE_APP_ENV = sandbox
 
 # base api
 VITE_APP_API_PREFIX = /
+# 是否生成包预览文件
+VITE_REPORT = true
+
+# 是否开启gzip压缩
+VITE_BUILD_GZIP = true
+
+# 是否删除生产环境 console
+VITE_DROP_CONSOLE = true
+
 # 测试Api
 VITE_APP_BASE_URL= https://testinterface.mtaste.cn/taste/
 # 测试环境域名
