--- a/.env.staging
+++ b/.env.staging
@@ -7,6 +7,15 @@ VITE_APP_ENV = staging
 
 # base api
 VITE_APP_API_PREFIX = /
+# 是否生成包预览文件
+VITE_REPORT = false
+
+# 是否开启gzip压缩
+VITE_BUILD_GZIP = false
+
+# 是否删除生产环境 console
+VITE_DROP_CONSOLE = true
+
 # 测试Api
 # VITE_APP_BASE_URL= https://interface.mtaste.cn/taste/
 VITE_APP_BASE_URL= https://interface.mtaste.cn/taste/
