--- a/.env
+++ b/.env
@@ -2,9 +2,10 @@ VUE_APP_PREVIEW = false
 
 VITE_APP_ENV = dev
 
-VITE_APP_BASE_PATH = /
+# port
+VITE_PORT = 8068
 
-VITE_APP_API_PREFIX = /taste
+VITE_OPEN = false
 
 # 是否生成包预览文件
 VITE_REPORT = false
@@ -14,6 +15,10 @@ VITE_BUILD_GZIP = false
 
 # 是否删除生产环境 console
 VITE_DROP_CONSOLE = false
+
+VITE_APP_BASE_PATH = /
+
+VITE_APP_API_PREFIX = /taste
 
 VITE_APP_BASE_URL = https://testinterface.mtaste.cn/taste/
 
